# Lonis

./: README.md  pyproject.toml  requirements.txt
analyzer/: cli.py  pipeline.py
analyzer/analyzers/: __init__.py  base.py  color.py  edge.py  gradient.py  spatial.py  texture.py
analyzer/utils/: image.py
docs/: lonis-legacy-and-future-context.md
docs/plans/: 2026-03-06-lonis-design.md  2026-03-06-lonis-implementation.md  2026-03-12-perceptron-design.md  2026-03-28-figma-first-slice-contract-pack.md  2026-03-28-figma-rust-provider-rewrite-strategy.md  2026-03-28-lonis-external-provider-protocol-spec-v0.md  2026-03-28-lonis-figma-provider-mapping-draft.md  2026-03-28-lonis-harness-design-draft.md  2026-03-28-lonis-legacy-archive-plan.md  2026-03-28-lonis-provider-interface-spec-v0.md  README.md
tests/: test_cli.py  test_color.py  test_edge.py  test_gradient.py  test_integration.py  test_pipeline.py  test_spatial.py  test_texture.py  test_utils.py
tests/fixtures/: generate_fixtures.py
